@@ -2,6 +2,8 @@ changelog
 
 ### next
 
++ Handle quoteUrl property.
+
 + Reroute memes to donks in emergencies.
 
 + Fix handling of svg with bom fucks.
